# dynamic_overload

./: README.md  requirements_dev.txt  setup.cfg
.github/workflows/: flake8.yml  mypy.yml  pylint.yml  tests.yml
src/dynamic_overload/: __init__.py  overload.py
tests/: test_classes.py  test_functions.py
