[metadata]
name = dynamic_overload
description = A basic package that allows to overload functions and class functions dynamically depending on the input types.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
author = Ferran Sanchez Llado
author_email = ferransll@gmail.com
url = https://github.com/ferranSanchezLlado/dynamic_overload.git
license = MIT
license_file = LICENSE
readme = README.md
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
    

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.10
    flake8>=3.9

[options.package_data]
dynamic_overload = py.typed

[flake8]
max-line-length = 160
# Ignore: F811
extend-ignore = E203, F811

[pylint.FORMAT]
max-line-length = 160

[coverage:report]
skip_empty = true
omit = */main.py
exclude_lines =
    pass
    pragma: no cover
    def __repr__
    def __str__
    if __name__ == .__main__.:
    if TYPE_CHECKING:
